--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
->    <title>Git-Demo</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Git-Demo</title>
 </head>
 <body>
-    
+    <h1><strong>Welcome</strong></h1>
 </body>
 </html>
